--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,14 @@
         <developer>
             <name>Vincent DURMONT</name>
             <email>vdurmont@gmail.com</email>
-            <url>http://www.vincent-durmont.com</url>
+            <url>https://www.vincent-durmont.com</url>
         </developer>
     </developers>
 
     <licenses>
         <license>
             <name>The MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
@@ -41,13 +41,13 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20200518</version>
+            <version>20220924</version>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
